tests/success/tuple_parameter.bz
function test1(t: #auto) -> usize
{
	return t[2].length();
}

function test()
{
	(consteval test1({[ 3, 3.234, "hello" ]}));
}
