tests/error/comptime/pointer_difference13.bz
function test()
{
	(consteval {
		let t: [int32, int32];
		&t[0] - &t[1];
	});
}
